<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:id="@+id/fragmentContainerMainPage">

    <android.support.v7.widget.CardView
        android:id="@+id/cd1"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="70dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"></ImageView>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cd1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameField"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/status_tag"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/statusTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameField"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/textView2"
        android:text="@string/status"
        android:textColor="@color/lightGreen"
        android:textSize="19dp"
        android:textStyle="normal"
        android:maxLength="500"
        android:maxLines="100"/>

    <!--<TextView-->
        <!--android:id="@+id/textView4"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/statusTV"-->
        <!--android:layout_centerHorizontal="false"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:text="Last update:"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="19dp"-->
        <!--android:textStyle="normal" />-->

    <!--<TextView-->
        <!--android:id="@+id/textView5"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/statusTV"-->
        <!--android:layout_centerHorizontal="false"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_toRightOf="@id/textView4"-->
        <!--android:text="@string/lastUpdate"-->
        <!--android:textColor="@color/darkRed"-->
        <!--android:textSize="19dp"-->
        <!--android:textStyle="normal" />-->


    <Button
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/Administration"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:text="@string/SignOut"
        android:textAllCaps="false"/>

</RelativeLayout>