<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esteldrive.esteldrive.ui.regestration.Regestration">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cd1"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="70dp">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop">
                </ImageView>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cd1"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/tv1"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_style"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etName"
                android:layout_marginTop="20dp"
                android:text="@string/e_mail"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/tv2"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_style"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/tv3"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_style"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:password="true" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPassword"
                android:layout_marginTop="20dp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/tv4"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_style"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:password="true" />


            <Button
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/etConfirmPassword"
                android:text="@string/done"
                android:textAllCaps="false" />

        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>